--- a/vitima/index.html
+++ b/vitima/index.html
@@ -4,6 +4,8 @@
         <title>Vitima</title>
     </head>
     <body>
-        Esta é a aplicação que sofrerá o ataque coordenado da botnet.
+        <h3 >Esta é a aplicação que sofrerá o ataque coordenado da botnet.</h3>
+        <h2 id=></h2>
+        <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
